init commit FileContentSorter WORK